test husky hook

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swrpg-docs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,7 +10,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run npm run lint"
+      "pre-commit": "npm run lint"
     }
   },
   "dependencies": {
